// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadge auto center alignment 1`] = `
<div>
  <div
    class="MuiGrid-container MuiGrid-spacing-xs-16 MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-item"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-item"
    >
      <p
        class="MuiTypography-root Typography-body Typography-semibold MuiTypography-body1"
      >
        Joe Doe
      </p>
    </div>
  </div>
</div>
`;

exports[`UserBadge default render 1`] = `
<div>
  <div
    class="MuiGrid-container MuiGrid-spacing-xs-16 MuiGrid-align-items-xs-flex-start"
  >
    <div
      class="MuiGrid-item"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-item"
    >
      <p
        class="MuiTypography-root Typography-body Typography-semibold MuiTypography-body1"
      >
        Joe Doe
      </p>
      <p
        class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
      >
        QA tester
      </p>
    </div>
  </div>
</div>
`;

exports[`UserBadge invert render 1`] = `
<div>
  <div
    class="MuiGrid-container MuiGrid-spacing-xs-16 MuiGrid-align-items-xs-flex-start"
  >
    <div
      class="MuiGrid-item"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-item"
    >
      <p
        class="MuiTypography-root Typography-body Typography-invert Typography-semibold MuiTypography-body1"
      >
        Joe Doe
      </p>
      <p
        class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
      >
        QA tester
      </p>
    </div>
  </div>
</div>
`;

exports[`UserBadge manual center alignment 1`] = `
<div>
  <div
    class="MuiGrid-container MuiGrid-spacing-xs-16 MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-item"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-item"
    >
      <p
        class="MuiTypography-root Typography-body Typography-semibold MuiTypography-body1"
      >
        Joe Doe
      </p>
      <p
        class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
      >
        QA tester
      </p>
    </div>
  </div>
</div>
`;

exports[`UserBadge override auto center alignment 1`] = `
<div>
  <div
    class="MuiGrid-container MuiGrid-spacing-xs-16 MuiGrid-align-items-xs-flex-start"
  >
    <div
      class="MuiGrid-item"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-item"
    >
      <p
        class="MuiTypography-root Typography-body Typography-semibold MuiTypography-body1"
      >
        Joe Doe
      </p>
    </div>
  </div>
</div>
`;

exports[`UserBadge small size 1`] = `
<div>
  <div
    class="MuiGrid-container MuiGrid-spacing-xs-16 MuiGrid-align-items-xs-flex-start"
  >
    <div
      class="MuiGrid-item"
    >
      <div
        class="Avatar-root Avatar-small"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-small Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-item"
    >
      <p
        class="MuiTypography-root Typography-body Typography-semibold MuiTypography-body1"
      >
        Joe Doe
      </p>
      <p
        class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
      >
        QA tester
      </p>
    </div>
  </div>
</div>
`;
